Feat: Home and Layouts

--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -1,6 +1,6 @@
-<nav class="flex items-center justify-between flex-wrap py-10 max-w-5xl mx-auto">
+<nav class="flex items-center justify-between flex-wrap py-10 max-w-3xl mx-auto">
     <div class="text-md antialiased font-medium">
-        <a href="/" class="block text-xl lg:inline-block mr-12 font-black">{{ settings:site_name }}</a>
+        <a href="/" class="block text-xl lg:inline-block mr-12 font-light">{{ settings:site_name }}</a>
     </div>
     <div class="block lg:hidden">
         <button class="flex items-center px-3 text-gray-800" x-bind:class="{'hidden': showMobileNav}" @click="showMobileNav = true">
