--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -1,5 +1,5 @@
-<nav class="flex items-center justify-between flex-wrap py-12 lg:py-24 max-w-5xl mx-auto">
-    <div class="text-sm">&copy; {{ now format="Y" }} {{ settings:site_name }} – Powered by <a href="https://statamic.com?ref=cool-writings" class="hover:text-teal">Statamic</a></div>
+<nav class="flex items-center justify-between flex-wrap py-12 lg:py-24 max-w-3xl mx-auto">
+    <div class="text-sm">&copy; {{ now format="Y" }} {{ settings:author }}</div>
     <div class="flex items-center">
         {{ settings:social }}
             <a href="{{ url }}" class="ml-4" aria-label="{{ name }}" rel="noopener">
