--- a/resources/views/articles/index.antlers.html
+++ b/resources/views/articles/index.antlers.html
@@ -1,5 +1,5 @@
-<div class="max-w-5xl mx-auto relative mt-16">
-    <article class="py-32 max-w-2xl mx-auto">
+<div class="max-w-3xl mx-auto relative mt-16">
+    <article class="py-32 mx-auto">
         <header class="content mb-16">
             <h1>{{ title }}</h1>
             {{ content | widont }}
