--- a/resources/views/articles/show.antlers.html
+++ b/resources/views/articles/show.antlers.html
@@ -1,5 +1,5 @@
-<div class="max-w-5xl mx-auto relative mt-16 content">
-    <article class="lg:py-32 max-w-2xl mx-auto">
+<div class="max-w-3xl mx-auto relative mt-16 content flex ">
+    <article class="max-w-2xl lg:pb-32">
         <h1>{{ title }}</h1>
         <div class="bg-gray-800 inline-block text-sm mb-16 pr-4 pl-16 -ml-16 uppercase tracking-widest text-white py-1 rounded-r-full">
             Published
