--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -1,6 +1,6 @@
-<div class="max-w-5xl mx-auto relative mt-16 content">
+<div class="max-w-3xl mx-auto relative mt-16 content">
     <article class="py-32 max-w-2xl mx-auto content">
-        <h1>{{ title }}</h1>
+        <h1 class="text-4xl">{{ title }}</h1>
         {{ content | widont }}
     </article>
 </div>
