--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="{{ mix src='css/tailwind.css' }}">
         <script src="{{ mix src='/js/site.js' }}"></script>
     </head>
-    <body class="bg-white font-sans leading-normal text-grey-800" x-data="{ showMobileNav: false }">
+    <body class="bg-white font-sans leading-normal text-grey-800">
         {{ partial:nav }}
         {{ template_content }}
         {{ partial:footer }}
