--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -1,10 +1,10 @@
-<nav class="flex items-center justify-between flex-wrap py-12 lg:py-24 max-w-3xl mx-auto">
+<footer class="flex items-center justify-between flex-wrap py-12 lg:py-24 max-w-3xl mx-auto">
     <div class="text-sm">&copy; {{ now format="Y" }} {{ settings:author }}</div>
     <div class="flex items-center">
         {{ settings:social }}
-            <a href="{{ url }}" class="ml-4" aria-label="{{ name }}" rel="noopener">
-                {{ svg :src="icon" class="h-6 w-6 hover:text-teal" }}
+            <a href="{{ url }}" class="ml-4" rel="noopener">
+                {{ name }}
             </a>
         {{ /settings:social }}
     </div>
-</nav>
+</footer>
