--- a/resources/views/page.antlers.html
+++ b/resources/views/page.antlers.html
@@ -1,6 +1,6 @@
-<div class="max-w-3xl mx-auto relative mt-16 content">
-    <article class="py-32 max-w-2xl mx-auto content">
+<main class="max-w-3xl mx-auto relative mt-16 content">
+    <div class="py-32 max-w-2xl mx-auto content">
         <h1>{{ title }}</h1>
         {{ content | widont }}
-    </article>
-</div>
+    </div>
+</main>
