--- a/resources/views/topics/index.antlers.html
+++ b/resources/views/topics/index.antlers.html
@@ -1,5 +1,5 @@
-<div class="max-w-4xl mx-auto relative mt-16">
-    <article class="py-32 max-w-2xl mx-auto">
+<main class="max-w-4xl mx-auto relative mt-16">
+    <div class="py-32 max-w-2xl mx-auto">
         <header class="content">
             <h1>{{ title }}</h1>
             {{ content }}
@@ -7,5 +7,5 @@
         {{ taxonomy:topics sort="title" }}
             <h2 class="text-4xl font-bold hover:text-teal"><a href="{{ url }}">{{ title | title }}</a></h2>
         {{ /taxonomy:topics }}
-    </article>
-</div>
+    </div>
+</main>
