--- a/resources/views/topics/show.antlers.html
+++ b/resources/views/topics/show.antlers.html
@@ -1,22 +1,22 @@
 <div class="max-w-4xl mx-auto relative mt-16 content">
-    <article class="pt-32 max-w-2xl mx-auto content">
+    <div class="pt-32 max-w-2xl mx-auto content">
         <p class="font-medium text-teal mb-0">{{ heading ?? "Articles about" }}</p>
         <h1>{{ title }}</h1>
         {{ content }}
-    </article>
+    </div>
 </div>
 <div class="max-w-2xl mx-auto mb-32">
     {{ entries }}
-    <div class="mb-16">
+    <article class="mb-16">
         <h2 class="mb-4">
             <a href="{{ url }}" class="text-2xl hover:text-teal tracking-tight leading-tight font-bold">
                 {{ title | widont }}
             </a>
         </h2>
         <p class="text-gray-600">
-            <span class="text-gray-800 text-sm uppercase tracking-widest font-medium">{{ date }}</span> &mdash;
+            <time datetime="{{ date iso_format="YYYY-MM-DD" }}" class="text-gray-800 text-sm uppercase tracking-widest font-medium">{{ date }}</time> &mdash;
             {{ excerpt | widont ?? content | strip_tags | safe_truncate:160:...}}
         </p>
-    </div>
+    </article>
     {{ /entries }}
 </div>
