--- a/resources/views/notes/show.antlers.html
+++ b/resources/views/notes/show.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-3xl mx-auto relative mt-16 content flex ">
+<div class="max-w-3xl mx-auto relative mt-16 content">
     <article class="max-w-2xl lg:pb-32">
         <div class="bg-gray-800 inline-block text-sm mb-16 px-4 uppercase tracking-widest text-white py-1 rounded-r-full">
             Published
