--- a/resources/views/topics/index.antlers.html
+++ b/resources/views/topics/index.antlers.html
@@ -1,5 +1,5 @@
-<main class="max-w-4xl mx-auto relative mt-16">
-    <div class="py-32 max-w-2xl mx-auto">
+<main class="max-w-3xl mx-auto relative mt-16">
+    <div class="max-w-2xl py-32">
         <header class="content">
             <h1>{{ title }}</h1>
             {{ content }}
