Chore: Added layout note

--- a/resources/views/page.antlers.html
+++ b/resources/views/page.antlers.html
@@ -1,3 +1,5 @@
+
+<!-- TODO: Revise the layout to unify it across the views -->
 <main class="max-w-3xl mx-auto relative mt-16 content">
     <div class="py-32 max-w-2xl mx-auto content">
         <h1>{{ title }}</h1>
