Test: color tests

--- a/resources/views/topics/index.antlers.html
+++ b/resources/views/topics/index.antlers.html
@@ -1,6 +1,6 @@
 <main class="max-w-3xl mx-auto relative mt-16">
-    <div class="max-w-2xl py-32">
-        <header class="content">
+    <div class="max-w-2xl">
+        <header class="content mb-16">
             <h1>{{ title }}</h1>
             {{ content }}
         </header>
