--- a/resources/views/notes/index.antlers.html
+++ b/resources/views/notes/index.antlers.html
@@ -1,5 +1,5 @@
 <main class="max-w-3xl mx-auto relative mt-16">
-    <div class="py-32 mx-auto">
+    <div class="mx-auto">
         <header class="content mb-16">
             <h1>{{ title }}</h1>
             {{ content | widont }}
