--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -1,4 +1,4 @@
-@import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;700&display=swap');
 
 body {
     @apply text-gray-800;
@@ -43,7 +43,7 @@ h1 {
     }
 
     a {
-        @apply text-teal font-medium underline;
+        @apply text-blue-300 font-medium underline;
         &:hover {
             @apply text-black;
         }
