Feat: Added SVGs and home page layout

--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,8 +1,12 @@
-<div class="max-w-3xl mx-auto relative pt-24">
+<div class="max-w-3xl mx-auto relative pt-[104px] mb-20">
     {{ partial:office }}
-    <h1>
+    <h1 class="text-[40px] leading-[44.5px] text-cyan-900 max-w-2xl mb-4">
         {{ content | raw }}
     </h1>
+    <button class="bg-cyan-100 text-cyan-800 py-2 px-4 rounded-xl">More Info <svg class="fill-cyan-800 inline-block" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M13 16.172L18.364 10.808L19.778 12.222L12 20L4.222 12.222L5.636 10.808L11 16.172V4H13V16.172Z"/>
+        </svg>
+        </button>
 </div>
 
 <div class="max-w-3xl mx-auto mb-32">
