Feat: Added books and bookmarks

--- a/resources/views/_nav.antlers.html
+++ b/resources/views/_nav.antlers.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap pt-24 max-w-3xl mx-auto">
+<nav class="flex items-center justify-between flex-wrap py-8 max-w-3xl mx-auto">
     <div class="antialiased">
         <a href="/" class="text-cyan-700 block lg:inline-block mr-12 uppercase text-base">{{ settings:site_name }}</a>
     </div>
