--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,6 +1,6 @@
-<div class="max-w-3xl mx-auto relative pt-[104px] mb-20">
+<div class="max-w-3xl mx-auto relative pt-16">
     {{ partial:office }}
-    <h1 class="text-[40px] leading-[44.5px] text-cyan-900 max-w-2xl mb-4">
+    <h1 class="text-[40px] leading-[44.5px] text-cyan-900 max-w-2xl">
         {{ content | raw }}
     </h1>
     <button class="bg-cyan-100 text-cyan-800 py-2 px-4 rounded-xl">More Info <svg class="fill-cyan-800 inline-block" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -11,7 +11,7 @@
 
 <div class="max-w-3xl mx-auto mb-32">
     <h2>Latest Notes</h2>
-    {{ collection:notes limit="5" as="notes" }}
+    {{ collection:notes limit="2" as="notes" }}
         {{ if no_results }}
             <h2 class="text-3xl italic tracking-tight">Nothing here.</h2>
         {{ /if }}
