Feat: padding, and second column

--- a/resources/views/_footer.antlers.html
+++ b/resources/views/_footer.antlers.html
@@ -1,4 +1,4 @@
-<footer class="flex items-center justify-between flex-wrap py-12 lg:py-24 max-w-3xl mx-auto">
+<footer class="flex items-center justify-between flex-wrap pb-8 pt-12 max-w-4xl mx-auto">
     <div class="text-sm">&copy; {{ now format="Y" }} {{ settings:author }}</div>
     <div class="flex items-center">
         {{ settings:social }}
