--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,4 +1,4 @@
-<div class="max-w-3xl mx-auto relative pt-16">
+<div class="max-w-4xl mx-auto relative pt-16 mb-20">
     {{ partial:office }}
     <h1 class="text-[40px] leading-[44.5px] text-cyan-900 max-w-2xl">
         {{ content | raw }}
@@ -9,7 +9,8 @@
         </button>
 </div>
 
-<div class="max-w-3xl mx-auto mb-32">
+<div class="max-w-4xl mx-auto flex justify-between">
+    <div class="w-2/4">
     <h2>Latest Notes</h2>
     {{ collection:notes limit="2" as="notes" }}
         {{ if no_results }}
@@ -30,4 +31,26 @@
             </article>
         {{ /notes }}
     {{ /collection:notes }}
+    </div>
+    <div class="w-2/5">
+        {{ collection:notes limit="2" as="notes" }}
+            {{ if no_results }}
+                <h2 class="text-3xl italic tracking-tight">Nothing here.</h2>
+            {{ /if }}
+    
+            {{ notes }}
+                <article class="mb-12">
+                    <h2 class="mb-4">
+                        <a href="{{ url }}" class="text-2xl hover:text-teal tracking-tight leading-tight font-bold">
+                            {{ title | widont }}
+                        </a>
+                    </h2>
+                    <p class="text-gray-600 max-w-xl">
+                        <time datetime="{{ date iso_format="YYYY-MM-DD" }}" class="text-gray-800 text-sm uppercase tracking-widest font-medium">{{ date }}</time> &mdash;
+                        {{ excerpt ? excerpt | widont : content | strip_tags | safe_truncate:160:...}}
+                    </p>
+                </article>
+            {{ /notes }}
+        {{ /collection:notes }}
+        </div>
 </div>
